--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "lucide-react": "^0.259.0",
-    "next": "13.4.9",
+    "next": "^13.4.10-canary.8",
     "postcss": "8.4.25",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "stripe": "^12.12.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
